kubeconfigs/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: api
  labels:
    name: api
spec:
  ports:
  - port: 8085
    targetPort: 8085
    protocol: TCP
    name: probe
    nodePort: 30747
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
    nodePort: 32002
  - port: 443
    protocol: TCP
    name: https
    nodePort: 30319
  selector:
    name: api
  type: NodePort
